--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 		<link rel="stylesheet" href="css/owl.carousel.css">
         <!-- bootstrap.min css -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
-        <!-- Font-awesome.min css -->
-		<link rel="stylesheet" href="css/font-awesome.min.css">
         <!-- Main Stylesheet -->
         <link rel="stylesheet" href="css/animate.min.css">
 
@@ -145,7 +143,7 @@
                         </h1>
                         <div class="content">
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms">
-                            <img class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms" src="images/cooker-img.png" alt="cooker-img">
+                            <img class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms" src="images/cooker-img.jpg" alt="日语角">
                         </p>
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms" style="text-align:justify">
                             杭州中日友好日語交流会は、日中文化交流と外国語の勉強や練習のために、2008年に浙江大学と浙江外国語学院の学生たちが創立しました。</br>
@@ -174,7 +172,7 @@
                                 </div>
                                 <div class="content-right">
                                     <h3>日本語コーナー</h3>
-                                    <p>毎週日曜日の午後に行っています。ここでいろんな方と出会い、楽しく会話しましょう。</p>
+                                    <p>毎週日曜日の午後に行っています。ここでいろんな人と出会い、楽しく会話しましょう。</p>
                                 </div>
                             </li>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="400ms">
@@ -210,7 +208,7 @@
                                 </div>
                                 <div class="content-right">
                                     <h3>山登り</h3>
-                                    <p>春または秋はやっぱり室外で体を動かしたいですね。山の中に、春の新緑や秋の紅葉を満喫しましょう！</p>
+                                    <p>春または秋はやっぱり室外で体を動かしたいですね。山の中に、春の新緑や秋の紅葉はとても奇麗です！</p>
                                 </div>
                             </li>
                             <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="800ms">
@@ -281,7 +279,7 @@
                                             <div class="border-bottom"></div>
                                             <span></span>
                                         </div>
-                                        <p>Wechat公式サイト運用開始、交流会のイベント情報や杭州に暮らしていた日本人の方が中国に対する思い等を月二回ぐらい更新している</p>
+                                        <p>Wechat公式サイト運用開始、交流会のイベント情報や杭州に暮らしていた日本人の方が中国に対する思い等を月二回ぐらい更新している。</p>
                                     </div>
                                </li>
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="700ms">
@@ -301,7 +299,7 @@
                                             <div class="border-bottom"></div>
                                             <span></span>
                                         </div>
-                                        <p>ウェブ公式サイト運用開始</p>
+                                        <p>公式ウェブサイト運用開始</p>
                                     </div>
                                 </li>
                             </ul>
@@ -328,21 +326,30 @@
                         <div class="info">
                             <ul>
                                 <li>
-                                    <h4><i class="fa fa-clock-o" style="width:20px;"></i>時間</h4>
+                                    <div style="display: flex;flex-direction: row;">
+                                        <svg t="1564485623412" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="10046" width="20" height="20"><path d="M585.142857 310.857143v256q0 8-5.142857 13.142857t-13.142857 5.142857H384q-8 0-13.142857-5.142857t-5.142857-13.142857v-36.571429q0-8 5.142857-13.142857t13.142857-5.142857h128V310.857143q0-8 5.142857-13.142857t13.142857-5.142857h36.571429q8 0 13.142857 5.142857t5.142857 13.142857z m237.714286 201.142857q0-84.571429-41.714286-156t-113.142857-113.142857-156-41.714286-156 41.714286-113.142857 113.142857-41.714286 156 41.714286 156 113.142857 113.142857 156 41.714286 156-41.714286 113.142857-113.142857 41.714286-156z m128 0q0 119.428571-58.857143 220.285714T732.285714 892 512 950.857143t-220.285714-58.857143T132 732.285714 73.142857 512t58.857143-220.285714T291.714286 132 512 73.142857t220.285714 58.857143T892 291.714286 950.857143 512z" p-id="10047" fill="#555555"></path></svg>
+                                    <h4 style="margin-left: 20px;">時間</h4>
+                                    </div>
                                     <p>毎週日曜日 13:30～17:00</p>
 
                                 </li>
                                 <li>
-                                  <h4><i class="fa fa-phone" style="width:20px;"></i>電話</h4>
+                                    <div style="display: flex;flex-direction: row;">
+                                        <svg t="1564487156811" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="11984" width="20" height="20"><path d="M914.285714 708.571429q0 15.428571-5.714285 40.285714t-12 39.142857q-12 28.571429-69.714286 60.571429-53.714286 29.142857-106.285714 29.142857-15.428571 0-30.285715-2t-32.857143-7.142857-26.857142-8.285715T598.857143 848.571429t-28-10.285715q-56-20-100-47.428571-72.571429-45.142857-150.857143-123.428572T196.571429 516.571429q-27.428571-44-47.428572-100-1.714286-5.142857-10.285714-28t-11.714286-31.714286-8.285714-26.857143T111.714286 297.142857 109.714286 266.857143q0-52.571429 29.142857-106.285714 32-57.714286 60.571428-69.714286 14.285714-6.285714 39.142858-12t40.285714-5.714286q8 0 12 1.714286 10.285714 3.428571 30.285714 43.428571 6.285714 10.857143 17.142857 30.857143t20 36.285714 17.714286 30.571429q1.714286 2.285714 10 14.285714t12.285714 20.285715 4 16.285714q0 11.428571-16.285714 28.571428t-35.428571 31.428572-35.428572 30.285714-16.285714 26.285714q0 5.142857 2.857143 12.857143t4.857143 11.714286 8 13.714286 6.571428 10.857143q43.428571 78.285714 99.428572 134.285714t134.285714 99.428571q1.142857 0.571429 10.857143 6.571429t13.714285 8 11.714286 4.857143 12.857143 2.857143q10.285714 0 26.285714-16.285715t30.285715-35.428571 31.428571-35.428572 28.571429-16.285714q8 0 16.285714 4t20.285714 12.285714 14.285714 10q14.285714 8.571429 30.571429 17.714286t36.285714 20 30.857143 17.142857q40 20 43.428572 30.285715 1.714286 4 1.714285 12z" p-id="11985" fill="#555555"></path></svg>                                        <h4 style="margin-left: 20px;">電話</h4>
+                                    </div>
                                   <p>+86-132 1616 0530（日本語対応可）</p>
                                 </li>
                                 <li>
-                                  <h4><i class="fa fa-envelope" style="width:20px;"></i>メール</h4>
+                                    <div style="display: flex;flex-direction: row;">
+                                        <svg t="1564487128542" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="11707" width="20" height="20"><path d="M1024 405.714286v453.714285q0 37.714286-26.857143 64.571429t-64.571428 26.857143H91.428571q-37.714286 0-64.571428-26.857143T0 859.428571V405.714286q25.142857 28 57.714286 49.714285 206.857143 140.571429 284 197.142858 32.571429 24 52.857143 37.428571t54 27.428571 62.857142 14h1.142858q29.142857 0 62.857142-14t54-27.428571 52.857143-37.428571q97.142857-70.285714 284.571429-197.142858 32.571429-22.285714 57.142857-49.714285z m0-168q0 45.142857-28 86.285714t-69.714286 70.285714q-214.857143 149.142857-267.428571 185.714286-5.714286 4-24.285714 17.428571t-30.857143 21.714286-29.714286 18.571429-32.857143 15.428571-28.571428 5.142857h-1.142858q-13.142857 0-28.571428-5.142857t-32.857143-15.428571-29.714286-18.571429-30.857143-21.714286T365.142857 580q-52-36.571429-149.714286-104.285714T98.285714 394.285714q-35.428571-24-66.857143-66T0 250.285714q0-44.571429 23.714286-74.285714T91.428571 146.285714h841.142858q37.142857 0 64.285714 26.857143t27.142857 64.571429z" p-id="11708" fill="#555555"></path></svg>                                        <h4 style="margin-left: 20px;">メール</h4>
+                                    </div>
                                   <p>(日本)田　中：fwnx3855@gmail.com</p>
                                     <p>(中国)アロン：hualong527@163.com</p>
                                 </li>
                                 <li>
-                                    <h4><i class="fa fa-wechat" style="width:20px;"></i>Wechat</i></h4>
+                                    <div style="display: flex;flex-direction: row;">
+                                        <svg t="1564487095563" class="icon" viewBox="0 0 1170 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="11430" width="20" height="20"><path d="M331.428571 263.428571q0-23.428571-14.285714-37.714285t-37.714286-14.285715q-24.571429 0-43.428571 14.571429T217.142857 263.428571q0 22.285714 18.857143 36.857143t43.428571 14.571429q23.428571 0 37.714286-14t14.285714-37.428572z m424.571429 289.714286q0-16-14.571429-28.571428t-37.428571-12.571429q-15.428571 0-28.285714 12.857143T662.857143 553.142857q0 16 12.857143 28.857143t28.285714 12.857143q22.857143 0 37.428571-12.571429t14.571429-29.142857z m-134.857143-289.714286q0-23.428571-14-37.714285T569.714286 211.428571q-24.571429 0-43.428572 14.571429T507.428571 263.428571q0 22.285714 18.857143 36.857143t43.428572 14.571429q23.428571 0 37.428571-14T621.142857 263.428571z m362.857143 289.714286q0-16-14.857143-28.571428t-37.142857-12.571429q-15.428571 0-28.285714 12.857143T890.857143 553.142857q0 16 12.857143 28.857143t28.285714 12.857143q22.285714 0 37.142857-12.571429t14.857143-29.142857z m-152-226.857143q-17.714286-2.285714-40-2.285714-96.571429 0-177.714286 44T486.571429 487.142857 440 651.428571q0 44.571429 13.142857 86.857143-20 1.714286-38.857143 1.714286-14.857143 0-28.571428-0.857143t-31.428572-3.714286-25.428571-4-31.142857-6-28.571429-6l-144.571428 72.571429 41.142857-124.571429Q0 551.428571 0 387.428571q0-96.571429 55.714286-177.714285t150.857143-127.714286T414.285714 35.428571q100.571429 0 190 37.714286t149.714286 104.285714T832 326.285714z m338.285714 320.571429q0 66.857143-39.142857 127.714286T1025.142857 885.142857l31.428572 103.428572-113.714286-62.285715q-85.714286 21.142857-124.571429 21.142857-96.571429 0-177.714285-40.285714T512.857143 797.714286 466.285714 646.857143t46.571429-150.857143T640.571429 386.571429t177.714285-40.285715q92 0 173.142857 40.285715t130 109.714285T1170.285714 646.857143z" p-id="11431" fill="#555555"></path></svg>                                        <h4 style="margin-left: 20px;">Wechat</h4>
+                                    </div>
                                     <p>(日本)田　中：tanaka_nobu</p>
                                     <p>(中国)アロン：108748350</p>
                                 </li>
@@ -356,11 +363,15 @@
                         <div class="blog">
                             <ul>
                                 <li>
-                                    <h4><i class="fa fa-map-marker" style="width:20px;"></i>場所</h4>
+                                    <div style="display: flex;flex-direction: row;">
+                                        <svg t="1564487070775" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="11153" width="20" height="20"><path d="M650.887046 365.714286q0-60.571429-42.857143-103.428572t-103.428572-42.857143-103.428571 42.857143-42.857143 103.428572 42.857143 103.428571 103.428571 42.857143 103.428572-42.857143 42.857143-103.428571z m146.285714 0q0 62.285714-18.857143 102.285714l-208 442.285714q-9.142857 18.857143-27.142857 29.714286t-38.571429 10.857143-38.571428-10.857143-26.571429-29.714286L230.887046 468Q212.029903 428 212.029903 365.714286q0-121.142857 85.714286-206.857143t206.857142-85.714286 206.857143 85.714286 85.714286 206.857143z" p-id="11154" fill="#555555"></path></svg>                                        <h4 style="margin-left: 20px;">場所</h4>
+                                    </div>
                                     <p>浙江省杭州市上城区青年路27号1楼，拉姆咖啡(青年路店)</p>
                                 </li>
                                 <li>
-                                    <h4><i class="fa fa-qrcode" style="width:20px;"></i>Wechat公式サイト</h4>
+                                    <div style="display: flex;flex-direction: row;">
+                                        <svg t="1564487002841" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="10780" width="20" height="20"><path d="M329.142857 658.285714v73.142857H256v-73.142857h73.142857z m0-438.857143v73.142858H256V219.428571h73.142857z m438.857143 0v73.142858h-73.142857V219.428571h73.142857zM182.857143 804h219.428571v-218.857143H182.857143v218.857143z m0-438.285714h219.428571V146.285714H182.857143v219.428572z m438.857143 0h219.428571V146.285714H621.714286v219.428572zM475.428571 512v365.714286H109.714286V512h365.714285z m292.571429 292.571429v73.142857h-73.142857v-73.142857h73.142857z m146.285714 0v73.142857h-73.142857v-73.142857h73.142857z m0-292.571429v219.428571h-219.428571v-73.142857H621.714286v219.428572H548.571429V512h219.428571v73.142857h73.142857V512h73.142857zM475.428571 73.142857v365.714286H109.714286V73.142857h365.714285z m438.857143 0v365.714286H548.571429V73.142857h365.714285z" p-id="10781" fill="#555555"></path></svg>                                        <h4 style="margin-left: 20px;">Wechat公式サイト</h4>
+                                    </div>
                                     <img src="images/qrcode_hz-jc.jpg" alt="Wechat公式サイト" style="width: 200px;">
                                 </li>
                             </ul>
@@ -373,7 +384,9 @@
                         <div class="gallary">
                             <ul>
                                 <li>
-                        <h4><i class="fa fa-road" style="width:20px;"></i>アクセス</h4>
+                                    <div style="display: flex;flex-direction: row;">
+                                        <svg t="1564486950240" class="icon" viewBox="0 0 1097 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="10455" width="20" height="20"><path d="M634.857143 569.142857v-2.285714l-13.714286-182.857143q-0.571429-7.428571-6.285714-12.857143t-13.142857-5.428571H495.428571q-7.428571 0-13.142857 5.428571T476 384l-13.714286 182.857143v2.285714q-0.571429 6.857143 4.571429 11.428572t12 4.571428h139.428571q6.857143 0 12-4.571428t4.571429-11.428572z m433.714286 266.857143q0 41.714286-26.285715 41.714286h-402.285714q7.428571 0 12.571429-5.428572t4.571428-12.857143l-11.428571-146.285714q-0.571429-7.428571-6.285715-12.857143t-13.142857-5.428571H470.857143q-7.428571 0-13.142857 5.428571t-6.285715 12.857143l-11.428571 146.285714q-0.571429 7.428571 4.571429 12.857143t12.571428 5.428572H54.857143q-26.285714 0-26.285714-41.714286 0-30.857143 14.857142-66.285714L281.714286 173.142857q4.571429-10.857143 14.857143-18.857143t21.714285-8h193.714286q-7.428571 0-13.142857 5.428572T492.571429 164.571429l-8.571429 109.714285q-0.571429 8 4.571429 13.142857t12.571428 5.142858h94.857143q7.428571 0 12.571429-5.142858t4.571428-13.142857l-8.571428-109.714285q-0.571429-7.428571-6.285715-12.857143t-13.142857-5.428572h193.714286q11.428571 0 21.714286 8t14.857142 18.857143l238.285715 596.571429q14.857143 35.428571 14.857143 66.285714z" p-id="10456" fill="#555555"></path></svg>                                        <h4 style="margin-left: 20px;">アクセス</h4>
+                                    </div>
                         <p>杭州地鉄一号線定安路駅より徒歩5分</p>
                         <!--百度地图容器-->
                         <div style="width:330px;height:300px;border:#ccc solid 1px;font-size:12px" id="map"></div>
